app/assets/stylesheets/pages/_home.scss
.gallery {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(1, 1fr);
  gap: 30px;
}

.gallery-item {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.gallery__media {
  width: 100%;
  height: 100%;
  object-fit: contain;
  transition: 0.8s;
}

.gallery__media:hover {
  transition: 0.8s;
  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.2)));
  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
  transform: scale(1.01);
}

.gallery__item:hover .overlay {
  opacity: 1;
  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.2)));
  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
}


@media (max-width: 768px) {
  .gallery {
    display: flex;
    flex-direction: column;
  }

  .gallery__item {
    grid-column: auto;
    grid-row: auto;
  }

  .gallery__media {
    object-fit: contain;
    position: relative;
    bottom: -49px;
    height: auto;
  }
  .gallery__item:hover .overlay {
    opacity: 1;
    bottom: -15px;
  }

}

.gallery__item--1 {
  grid-column: 1 / span 5;
  grid-row: auto;
}

.gallery__item--2 {
  grid-column: 6 / span 3;
  grid-row: auto;
}

.gallery__item--3 {
  grid-column: 1 / span 3;
  grid-row: auto;
}

.gallery__item--4 {
  grid-column: 4/ span 5;
  grid-row: auto;
}

.gallery__item--5 {
  grid-column: 1 / span 5;
  grid-row: auto;
}

.gallery__item--6 {
  grid-column: 6 / span 3;
  grid-row: auto;
}

.gallery__item--7 {
  grid-column: 4 / span 5;
  grid-row: auto;
}

.gallery__item--8 {
  grid-column: 1 / span 3;
  grid-row: 4;
}

.gallery__item--9 {
  grid-column: 1 / span 4;
  grid-row: auto;
}

.gallery__item--10 {
  grid-column: 5 / span 4;
  grid-row: auto;
}

.gallery__item--11 {
  grid-column: 1 / span 4;
  grid-row: auto;
}

.gallery__item--12 {
  grid-column: 5 / span 4;
  grid-row: auto;
}

.gallery__item--13 {
  grid-column: 2 / span 6;
  grid-row: auto;
  width: 80%;
  margin-left: 10%;
}


/* i put this here for videos ...
.gallery__item--100 {
  grid-column: 1 / span 4;
  grid-row: 6 / span 2;
}
*/

.overlay {
  display: flex;
  flex-wrap: wrap;
  margin: -9px 10px -62px 12px;
  bottom: 23px;
  justify-content: space-between;
  position: relative;
  color: black;
  opacity: 0;
  font-size: large;
  font-family: $body-font;
  transition: 1s;
  z-index: -1;
}

.icons {
  display: flex;
  position: relative;
  justify-content: right;
  bottom: 25px;
  flex-direction: row;
  height: 70px;
  width: 50px;
}

